[gd_scene load_steps=5 format=3 uid="uid://cnwl2fo7wydv"]

[ext_resource type="Script" path="res://scripts/OptionsMenu.gd" id="1_g3pb6"]
[ext_resource type="PackedScene" uid="uid://c1j01rcm2pnqi" path="res://scenes/ActionInput.tscn" id="2_lel4t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wtau6"]
bg_color = Color(0.737255, 0.658824, 0.580392, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.00784314, 0.00784314, 0.00784314, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 16.0
expand_margin_top = 16.0
expand_margin_right = 16.0
expand_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gwk2a"]
bg_color = Color(0.333333, 0.258824, 0.184314, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.00784314, 0.00784314, 0.00784314, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.784314)
shadow_size = 1
shadow_offset = Vector2(2.5, 2.5)

[node name="OptionsMenu" type="Control"]
visible = false
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g3pb6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -150.0
offset_right = 240.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wtau6")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -35.0
offset_right = 35.0
offset_bottom = 16.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "OPTIONS"

[node name="VScrollBar" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -75.0
offset_right = 175.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerOneControls" type="VBoxContainer" parent="Panel/VScrollBar"]
layout_mode = 2

[node name="ActionInput" parent="Panel/VScrollBar/PlayerOneControls" instance=ExtResource("2_lel4t")]
layout_mode = 2
action_input = "W"
action_name = "MOVE_UP_1"

[node name="ActionInput2" parent="Panel/VScrollBar/PlayerOneControls" instance=ExtResource("2_lel4t")]
layout_mode = 2
action_input = "S"
action_name = "MOVE_DOWN_1"

[node name="ActionInput3" parent="Panel/VScrollBar/PlayerOneControls" instance=ExtResource("2_lel4t")]
layout_mode = 2
action_input = "A"
action_name = "MOVE_LEFT_1"

[node name="ActionInput4" parent="Panel/VScrollBar/PlayerOneControls" instance=ExtResource("2_lel4t")]
layout_mode = 2
action_input = "D"
action_name = "MOVE_RIGHT_1"

[node name="ActionInput5" parent="Panel/VScrollBar/PlayerOneControls" instance=ExtResource("2_lel4t")]
layout_mode = 2
action_input = "SPACE"
action_name = "ATTACK_1"

[node name="ActionInput6" parent="Panel/VScrollBar/PlayerOneControls" instance=ExtResource("2_lel4t")]
layout_mode = 2
action_input = "Q"
action_name = "HABILITY_1"

[node name="ActionInput7" parent="Panel/VScrollBar/PlayerOneControls" instance=ExtResource("2_lel4t")]
layout_mode = 2
action_input = "UP ARROW"
action_name = "MOVE_UP_2"

[node name="ActionInput8" parent="Panel/VScrollBar/PlayerOneControls" instance=ExtResource("2_lel4t")]
layout_mode = 2
action_input = "DOWN ARROW"
action_name = "MOVE_DOWN_2"

[node name="ActionInput9" parent="Panel/VScrollBar/PlayerOneControls" instance=ExtResource("2_lel4t")]
layout_mode = 2
action_input = "LEFT ARROW"
action_name = "MOVE_LEFT_2"

[node name="ActionInput10" parent="Panel/VScrollBar/PlayerOneControls" instance=ExtResource("2_lel4t")]
layout_mode = 2
action_input = "RIGHT ARROW"
action_name = "MOVE_RIGHT_2"

[node name="ActionInput11" parent="Panel/VScrollBar/PlayerOneControls" instance=ExtResource("2_lel4t")]
layout_mode = 2
action_input = "1"
action_name = "ATTACK_2"

[node name="ActionInput12" parent="Panel/VScrollBar/PlayerOneControls" instance=ExtResource("2_lel4t")]
layout_mode = 2
action_input = "2"
action_name = "HABILITY_2"

[node name="ReturnButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -40.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_gwk2a")
text = "RETURN"

[connection signal="pressed" from="Panel/ReturnButton" to="." method="_on_return_button_pressed"]
